# QnA-RAG-AI-telegram-bot

./: .env.example  .gitignore  Dockerfile  config.toml  docker-compose.yml  pyproject.toml  test_rag.py
scripts/: plot_graph.py
src/: config.py  logger.py  secrets.py
src/bot/: __main__.py  helpers.py  instance.py  keyboards.py  states.py
src/bot/handlers/: callbacks.py  commands.py  messages.py
src/database/: init_qdrant.py
src/llm/: chains.py  graph.py  nodes.py  retriever.py  schemas.py  state.py
src/utils/: brief.py  docs.py  email.py  html.py  name.py  pdf.py  phone.py  transcription.py
