[project]
name = "qna-rag-ai-telegram-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "ant100pshnik",email = "mypochtav@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "lxml (>=6.0.2,<7.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "qdrant-client (>=1.17.1,<2.0.0)",
    "langchain-qdrant (>=1.1.0,<2.0.0)",
    "langchain-huggingface (>=1.2.1,<2.0.0)",
    "sentence-transformers (>=5.3.0,<6.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "langchain-text-splitters (>=1.1.1,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "nest-asyncio (>=1.6.0,<2.0.0)",
    "langchain-groq (>=1.1.2,<2.0.0)",
    "aiogram (>=3.27.0,<4.0.0)",
    "assemblyai (>=0.59.0,<0.60.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "langgraph (>=1.1.6,<2.0.0)",
    "langgraph-checkpoint-mongodb (>=0.1.0)",
    "langchain-core (>=1.2.28,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
